--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alfvj17.github.io/ace-token-farm/",
+  "homepage": "https://alfvj17.github.io/blockchain-developer-bootcamp-final-project/",
   "name": "ace-token-farm",
   "version": "0.1.0",
   "private": true,
